fixed background color gaps and small size photos

--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 
 
+body{
+	background-color: rgb(236, 236, 236);
+
+}
+
 .navbar-brand{
 	font-family: 'Libre Baskerville';
 }
@@ -17,6 +22,8 @@ li{
 .container{
 	background-color: rgb(236, 236, 236);
 	width: 100%;
+	margin-left: 1%;
+	margin-top: 1%;
 }
 
 .cecilystyling, .col-md-8, .col-md-7{
@@ -62,11 +69,15 @@ input[type="text"] {
 	
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 	color: rgb(174, 169, 161);
-	width: 600px;
+	width: 250%;
 }
 
 span{
 	 display: table-cell;
+}
+
+textarea{
+	width: 100%;
 }
 
 #submitbutton{
@@ -123,15 +134,23 @@ span{
 	color: #fff;
 	font-size: 18px;
 	font-family: 'Georgia', Times, Times New Roman, serif;
-	top: 185px;
+	top: 70%;
 	padding: 10px;
-	width: 300px;
+	width: 88%;
 }
 
 #cat1, #cat2, #cat3, #cat4, #cat5{
-	width: 300px;
-	height: 300px;
+	width: 100%;
+	height: 100%;
 	padding-top: 5%;
+}
+
+#cat1, #cat3{
+	
+}
+
+#cat2, #cat4{
+
 }
 
 /*footer section*/
@@ -139,7 +158,7 @@ span{
 #footersection{
 	background-color: #666;
 	width: 100%;
-	padding: 10px;
+	padding: 5px;
 	border-top: 5px solid #4aaaa5;
 	position: fixed;
     bottom: 0;
@@ -151,5 +170,6 @@ span{
 	color: rgb(122, 134, 139);
 	text-align: center;
 	z-index: 100;
+	font-family: 'Libre Baskerville';
 
 }
